# compilagent_triton

./: .gitignore  .gitmodules  README.md  pyproject.toml
.compilagent/memory/: experiments.jsonl
.compilagent/traces/: events.jsonl
docs/: integration_guide.md
scripts/: phase9_victory.py
scripts/experiments/: plot_models_compare.py  plot_study.py  run_study.py
scripts/results/: suite_results_fast_tier.json
src/compilagent/: __init__.py  _compat.py  settings.py
src/compilagent/core/: __init__.py  analysis.py  backend.py  search_space.py  tool_decl.py  workload.py
src/compilagent/harness/: base.py
src/compilagent/integrations/claude_agent_sdk/: _mcp.py  harness.py  prompts.py
src/compilagent/integrations/observation_ui/: app.py
src/compilagent/integrations/observation_ui/static/: app.js  index.html  styles.css
src/compilagent/integrations/pydantic_acp/: factory.py
src/compilagent/integrations/pydantic_ai/: __init__.py  _model.py  _tool_adapter.py  _translate.py  harness.py  prompts.py
src/compilagent/integrations/python/: api.py
src/compilagent/integrations/triton/_internal/: harness.py  schemas.py
src/compilagent/integrations/triton/examples/: vector_add.py  vector_copy.py
src/compilagent/observation/: events.py
src/compilagent/session/: __init__.py  completion.py  inputs.py  leaderboard.py  multi_objective.py  session.py  tools.py
src/compilagent_triton/: __init__.py  agent.py  agent_runner.py  api.py  benchmarking.py  candidates.py  claude_agent_harness.py  compiler.py  decision_traces.py  episodes.py  events.py  examples.py  experiment_memory.py  gpu_benchmarks.py  gpu_copy_benchmarks.py  gpu_reduction_benchmarks.py  harness_selection.py  llm.py  observation_server.py  optimization_toolset.py  optimizer_runtime.py  policy.py  schemas.py  settings.py  trace_store.py  workload_runner.py  workspace.py
src/compilagent_triton/backends/: __init__.py  base.py
src/compilagent_triton/backends/torch_inductor/: __init__.py  analysis.py  backend.py  correctness.py  harness.py  interception.py  knobs.py
src/compilagent_triton/backends/torch_inductor/derivation/: __init__.py  fx_rewrites.py  inductor_knobs.py  lowering_overrides.py  per_kernel_tuning.py
src/compilagent_triton/backends/triton/: __init__.py  analysis.py  backend.py  kernel_synthesis.py  passes.py  pipeline.py  stages.py
src/compilagent_triton/backends/triton/derivation/: __init__.py  kernel_annotations.py  meta_parameters.py  pass_impact.py
src/compilagent_triton/core/: __init__.py  experiment_log.py  search_space.py  workload.py
src/compilagent_triton/observer_ui/: app.js  index.html  styles.css
src/compilagent_triton/triton_hooks/: __init__.py  stages.py
src/compilagent_triton/workloads/: __init__.py  registry.py
src/compilagent_triton/workloads/pytorch_models/: __init__.py  vit_b_16.py  vit_block.py  vit_l_16.py
src/compilagent_triton/workloads/triton_kernels/: __init__.py  reduction_sum.py  vector_add.py  vector_copy.py
tests/: test_agent.py  test_benchmarking.py  test_candidates.py  test_compiler.py  test_cuda_integration.py  test_decision_traces.py  test_episodes.py  test_examples.py  test_experiment_memory_policy.py  test_observation_events.py  test_observation_server.py  test_settings.py  test_stage_hooks.py  test_workspace.py
tests/compilagent/: test_completion_policy.py  test_multi_objective.py  test_session_continuation.py  test_session_with_fakes.py
tests/compilagent/integrations/: conftest.py  test_claude_agent_sdk_continuation_prompt.py  test_claude_agent_sdk_harness.py  test_observation_ui_routes.py  test_pydantic_ai_continuation_prompt.py  test_pydantic_ai_harness.py  test_python_entry_points.py
