[project]
name = "compilagent-triton"
version = "0.1.0"
description = "ACP environment for agentic Triton compiler optimization experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.111",
    "pydantic>=2.7",
    "pydantic-ai-slim[anthropic]==1.83.0",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = ["fastapi>=0.115", "pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]
gpu = ["numpy>=2.0", "torch>=2.11", "torchvision>=0.20"]
observe = ["fastapi>=0.115", "uvicorn>=0.30", "websockets>=12"]

[project.scripts]
compilagent-triton = "compilagent_triton.agent:main"
compilagent-observe = "compilagent_triton.observation_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compilagent_triton"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-q", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
