[project]
name = "compilagent"
version = "0.2.0"
description = "Plug-and-play optimization core with agentic compiler and harness integrations."
readme = "README.md"
requires-python = ">=3.10"
# The base install only carries what the core (`src/compilagent/`) needs.
# Every integration ships in its own optional extra below.
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
# --- per-integration extras ---
# Triton compiler backend
triton = ["torch>=2.11", "triton>=3.0"]
# torch.compile / Inductor backend
inductor = ["torch>=2.11"]
# pydantic-ai harness (default LLM agent runtime)
pydantic-ai = ["pydantic-ai-slim[anthropic,mistral,openai]==1.83.0"]
# Claude Agent SDK harness
claude-sdk = ["claude-agent-sdk>=0.1.68"]
# pydantic-acp server shim
acp = ["pydantic-acp>=0.9.0"]
# Observation FastAPI + SPA
ui = ["fastapi>=0.115", "uvicorn>=0.30", "websockets>=12"]
# Convenience: everything (mirrors a CUDA-equipped dev box)
all = [
    "torch>=2.11",
    "torchvision>=0.20",
    "triton>=3.0",
    "numpy>=2.0",
    "pydantic-ai-slim[anthropic,mistral,openai]==1.83.0",
    "claude-agent-sdk>=0.1.68",
    "pydantic-acp>=0.9.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12",
]

# --- developer / experiment extras ---
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "httpx>=0.27"]
gpu = ["numpy>=2.0", "torch>=2.11", "torchvision>=0.20"]

[project.scripts]
compilagent-acp = "compilagent.integrations.pydantic_acp.cli:main"
compilagent-observe = "compilagent.integrations.observation_ui.cli:main"

[project.entry-points."compilagent.integrations"]
# Each integration self-registers when its module is imported. The core's
# `load_entry_point_integrations()` imports each module name listed here at
# session bootstrap, which fires the registry side effects. Out-of-tree third
# parties advertise the same group from their own pyproject.
triton = "compilagent.integrations.triton"
torch_inductor = "compilagent.integrations.torch_inductor"
python = "compilagent.integrations.python"
pydantic_ai = "compilagent.integrations.pydantic_ai"
claude_agent_sdk = "compilagent.integrations.claude_agent_sdk"
pydantic_acp = "compilagent.integrations.pydantic_acp"
observation_ui = "compilagent.integrations.observation_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compilagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-q", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# Lifted compiler internals are evolving with their upstream libraries.
# We don't lint them here so the diff stays focused on architecture seams.
[tool.ruff.lint.per-file-ignores]
"src/compilagent/integrations/triton/_internal/*.py" = ["B", "C4", "SIM"]
"src/compilagent/integrations/triton/_internal/derivation/*.py" = ["B", "C4", "SIM"]
"src/compilagent/integrations/torch_inductor/_internal/*.py" = ["B", "C4", "SIM"]
"src/compilagent/integrations/torch_inductor/_internal/derivation/*.py" = ["B", "C4", "SIM"]
